footer nav now stacks to fix overflow

--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,6 +1,5 @@
 footer {
     background-color: $color-primary;
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -38,6 +37,7 @@ ul {
   text-align: center;
   justify-content: space-around;
 }
+
 
 .footer-nav__item{
   padding: 0 1em;
@@ -93,4 +93,9 @@ form .clear{
   font-size: smaller;
   text-align: center;
   padding: 0 10px;
+}
+@media (max-width: 769px) {
+  .footer-nav {
+    display: block;
+  }
 }
